--- a/style.css
+++ b/style.css
@@ -29,7 +29,6 @@
         margin: 5rem auto;
         padding: 100px 0;
         background-color: var(--turqouise);
-        /* border: 5px solid var(--black); */
       }
 
       .container {
@@ -37,7 +36,6 @@
         margin: 0 auto;
         max-width: 100vw;
         margin-bottom: 2rem;
-        /* border: 5px solid red; */
       }
 
       .grid {
@@ -49,6 +47,12 @@
         grid-auto-flow: dense;
         align-items: center;
       }
+      
+      .gallery {
+        display:grid;
+        gap:2rem;
+        grid-template-columns: minmax(500px, 2fr);
+      }
 
       .btn {
         border: 0;
@@ -57,7 +61,8 @@
         font-size: 5em;
         font-family: "Solway", serif;
         font-weight: 700;
-        transition: 0.7s ;
+        cursor:pointer;
+        transition:0.7s cubic-bezier(0.175, 0.885, 0.32, 1.275);
       }
 
       .btn:hover {
@@ -86,8 +91,7 @@
       }
 
       .shrek {
-        width:70%;
-
+        max-width:500px;
       }
 
       .col {
@@ -111,5 +115,14 @@
 
         .grid {
           grid-template-rows: repeat(auto-fill, minmax(6rem, 1fr));
+        }
+
+        .shrek {
+          max-width:700px;
+        }
+
+        .gallery {
+        margin-left: 15rem;
+
         }
       }
